# webpack-stats

./: .gitignore  Cargo.toml  README.md
crates/meshed/: Cargo.toml  README.md
crates/meshed/src/: anymap.rs  extract.rs  graph.rs  identify.rs  lib.rs
crates/meshed/src/graph/: edge.rs  node.rs  traversal.rs
crates/webpack-q/: Cargo.toml  build.rs
crates/webpack-q/js/: index.html  package-lock.json  package.json  vite.config.js
crates/webpack-q/js/src/: App.svelte
crates/webpack-q/js/src/lib/: Viz.svelte  draw.js
crates/webpack-q/src/: graphs.rs  lib.rs  operations.rs  templating.rs
crates/webpack-q/src/graphs/: ser.rs
crates/webpack-q/templates/: index.html
crates/webpack-stats/: Cargo.toml
crates/webpack-stats/src/: common.rs  lib.rs  rc.rs  v5.rs
crates/webpack-stats/src/common/: chunk.rs  entry.rs  import.rs  module.rs
crates/webpack-stats/src/v5/: asset.rs  chunk.rs  emit.rs  entry_point.rs  module.rs  reason.rs  tests.rs
crates/webpack-stats/test_projects/common_src/: common.js  entry_two.js  index.js  module1.js  module2.js  utils.js
crates/webpack-stats/test_projects/v1/: compilation-stats.json
crates/webpack-stats/test_projects/v1/src/: index.js  module1.js  module2.js
crates/webpack-stats/test_projects/v2/: webpack.config.js
crates/webpack-stats/test_projects/v3/: compilation-stats.json  package-lock.json  package.json
crates/webpack-stats/test_projects/v4/: compilation-stats.json  package.json  webpack.config.js
crates/webpack-stats/test_projects/v5/: compilation-stats.json  package-lock.json  webpack.config.js
src/: common.rs  lib.rs  v5.rs
src/v5/: asset.rs  chunk.rs  emit.rs  entry_point.rs  module.rs  reason.rs  source.rs  tests.rs
test_projects/common_src/: index.js  module1.js  module2.js
test_projects/v1/: package-lock.json  package.json  webpack.config.js
test_projects/v2/: compilation-stats.json  package-lock.json  package.json
test_projects/v4/: compilation-stats.json  package-lock.json  webpack.config.js
test_projects/v5/: package.json  webpack.config.js
